vendor/tt-call/tests/ui/type-qpath-eof6.stderr
error: no rules expected the token `::`
 --> tests/ui/type-qpath-eof6.rs:5:24
  |
5 |     input = [{ <T as F>:: }]
  |                        ^^ no rules expected this token in macro call
  |
  = note: while trying to match end of macro
